--- a/style.css
+++ b/style.css
@@ -9,13 +9,13 @@ h1 {
     text-align:center;
     color: white;
     font-family: "Futrua";
-	src: url(fonts/Futura\ Condensed\ Medium.otf)
+	src: url(fonts/FuturaT\ Regular.ttf)
 }  
 
 p {
     color: white;
     font-family: "Futura";
-	src: url(fonts/Futura\ Condensed\ Medium.otf)
+	src: url(fonts/FuturaLightOblique.ttf)
 }
 
 
